# module_10

./: docker-compose.yaml  migration.py  pyproject.toml
quotes/: forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_rename_authors_author_remove_quote_added_by.py
quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author_detail.html  authors.html  main.html
quotes_project/: settings.py  urls.py
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
utils/: models.py
