[tool.poetry]
name = "module-9"
version = "0.1.0"
description = ""
authors = ["Nikukusik <nikukusika@hmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^71.1.0"
django = "^5.0.7"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
